Create soldier solution endpoint
